# ave-guardian

./: LICENSE  Makefile  README.md  SKILL.md  pyproject.toml
cron/: alert_checker_cron.sh  install-crons.sh  liquidity_check_cron.sh  meme_scanner_cron.sh  strategy_checker_cron.sh  whale_watcher_cron.sh
docs/: ALERTS.md  ALGORITHMS.md  CONVERSATIONS.md  README.md
scripts/: anomaly_alert.py  health_reporter.py  meme_scanner.py  narrative_scorer.py  notify.sh  state_manager.py  strategy_executor.py  utils.py  whale_detector.py
state/: .ave-guardian-state.json
